# tumor_board

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md
agents/guidelines/: README.md  __init__.py  api.py  config.py  contract.py  demo.py  loader.py  matcher.py  requirements.txt  synthesis.py  triage.py
agents/guidelines/shelf/: AUTHORING.md  (+5 more)
agents/trials/: AUTHORING.md  README.md  __init__.py  api.py  config.py  demo.py  eligibility.py  extract.py  llm_criteria.py  loader.py  requirements.txt  verdict.py
backend/: .env.example  pyproject.toml
backend/app/: case_schema.py  cases.py  config.py  goc.py  main.py  orchestrator.py  schema.py
backend/app/agents/: __init__.py  enrich.py  schema.py
backend/app/data/: case_nsclc_egfr.json  guidelines.json  interactions.json  practice_patterns.json  trials.json
backend/app/ingest/: __init__.py  fhir_adapter.py  transcript.py
backend/app/stage2/: __init__.py  adapter.py  bundle.py  enums.py  extract.py  ids.py  loader.py  markdown.py  transcript.py
backend/app/tools/: __init__.py  _data.py  drug_interactions.py  guidelines.py  operability.py  practice_pattern.py  stale_data.py  trials.py
backend/tests/: test_analyze_wiring.py  test_cases_api.py  test_enrich.py  test_goc.py  test_ingest.py  test_operability_gate.py  test_stage2_bundle.py  test_stage2_extract.py  test_stage2_loader.py  test_triggered_checks.py
data/: README.md
docs/: architecture-delta.md  stage-interface-contract.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
(+50 files in other folders)
