[project]
name = "tumor-board-backend"
version = "0.1.0"
description = "Tumor Board Gap-Detection Assistant — Claude tool_use orchestrator + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.117.0",
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pyyaml>=6.0",
    # Required by fastapi.testclient (tests/test_cases_api.py). Present
    # transitively via anthropic, but declared because the tests import it
    # directly — a transitive dep is not a contract.
    "httpx>=0.28.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
